# mcp-optimizer-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PERFORMANCE.md  TROUBLESHOOTING.md
docs/adr/: 0001-code-execution-approach.md  0002-docker-sandbox.md  0003-progressive-capability-discovery.md  README.md
examples/: basic_usage.py  custom_capability.py  sentry_integration.py
mcp_optimizer/: __init__.py  capabilities.py  cli.py  context.py  core.py  metrics.py  sandbox.py  sandbox_hardened.py  sessions.py  telemetry.py
tests/: conftest.py  test_benchmarks.py  test_security.py
