[metadata]
name = mcp-optimizer-framework
version = 1.0.0
author = Ryan Hart
author_email = rhart696@gmail.com
description = Generic optimization engine for Model Context Protocol integrations - 99.7% token reduction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhart696/mcp-optimizer-framework
project_urls =
    Bug Reports = https://github.com/rhart696/mcp-optimizer-framework/issues
    Source = https://github.com/rhart696/mcp-optimizer-framework
    Documentation = https://github.com/rhart696/mcp-optimizer-framework/blob/main/docs/
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring
    Topic :: Software Development :: Code Generators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Framework :: AsyncIO
keywords =
    mcp
    model-context-protocol
    optimization
    token-reduction
    code-execution
    sandboxing
    docker
    gvisor

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp>=3.8.0
    pydantic>=2.0.0
    structlog>=23.0.0
    click>=8.0.0
    rich>=13.0.0
    jsonschema>=4.0.0
    python-dotenv>=1.0.0
    redis>=4.0.0
    prometheus-client>=0.15.0
    opentelemetry-api>=1.20.0
    opentelemetry-sdk>=1.20.0
    opentelemetry-exporter-otlp-proto-grpc>=1.20.0
    opentelemetry-exporter-prometheus>=0.59b0
    docker>=6.0.0

[options.packages.find]
exclude =
    tests*
    test_venv*
    docs*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    mypy>=1.0.0
    flake8>=6.0.0
    isort>=5.0.0

[options.entry_points]
console_scripts =
    mcp-optimizer = mcp_optimizer.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --cov=mcp_optimizer
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml

[coverage:run]
source = mcp_optimizer
omit =
    */tests/*
    */test_venv/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    test_venv,
    .venv
ignore =
    E203,
    W503,
    E501

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[isort]
profile = black
line_length = 100
skip = test_venv,.venv,build,dist
